--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MovieReviewApp</string>
+
+    <string name="toast_no_data">No Data Returned</string>
 </resources>
