Added more fields and added butterknife to bindviews

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">MovieReviewApp</string>
-
+    <string name="image_description">Movie Thumbnail</string>
     <string name="toast_no_data">No Data Returned</string>
 </resources>
